src/blog/deploy/10-blog-deploy.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: blog
  name: blog
  labels:
    app: blog
spec:
  containers:
  - image: launcher.gcr.io/google/wordpress4-php5-apache
    name: wordpress
    volumeMounts:
    - name: blog-data
      mountPath: /var/www/html
      subPath: wp
    ports:
    - containerPort: 80

    readinessProbe:
      httpGet:
        path: /license.txt
        port: 80
      periodSeconds: 1
      timeoutSeconds: 1
      successThreshold: 1
      failureThreshold: 10
  - image: launcher.gcr.io/google/mysql5
    name: mysql
    volumeMounts:
    - name: mysql-data
      mountPath: /var/lib/mysql
      subPath: db
    ports:
    - containerPort: 3306
  volumes:
  - name: blog-data
    persistentVolumeClaim:
      claimName: blog-data
  - name: mysql-data
    persistentVolumeClaim:
      claimName: mysql-data
