src/blog/deploy/20-blog-service.yaml
kind: Service
apiVersion: v1
metadata:
  namespace: blog
  name: blog
  labels:
    app: blog
spec:
  ports:
  - port: 80
    name: wordpress
  selector:
      app: blog
  type: NodePort
