src/blog/deploy/30-blog-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: blog
  name: blog
  annotations:
    kubernetes.io/ingress.global-static-ip-name: wiresafe-com
spec:
  backend:
    serviceName: blog
    servicePort: 80
  rules:
  - host: wiresafe.com
    http:
      paths:
      - path: /blog
        backend:
          serviceName: blog
          servicePort: 80
